# autel-upg-extraction-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  autel_upg_extractor_combined_fixed.py  autel_upg_extractor_corrected.py  autel_upg_extractor_recursive_final.py  pyproject.toml  replicate_upg_pipeline.sh  replicate_upg_recursive_pipeline.sh  upg_archive_scanner.py
