[project]
name = "autel-upg-extractor"
version = "1.0.0"
description = "A toolkit for extracting and recursively unpacking Autel UPG firmware update packages."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "pandas"
]
requires-python = ">=3.6"

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"