[project]
name = "autel-upg-extraction-toolkit"
version = "1.1.0"
description = "Toolkit for parsing and recursively extracting Autel UPG firmware packages."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = ["pandas"]
requires-python = ">=3.6"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"